# firmware

./: CMakeLists.txt  CMakePresets.json  FIXME.md  README.md  build.sh  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt
app/FreeRTOS/: FreeRTOSConfig.h
app/cmake/: FreeRTOS.cmake  incp.cmake
app/drivers/: CMakeLists.txt
app/drivers/display/: display.c  display.h  display_chars.h  display_driver.c
app/incp/: CMakeLists.txt  schema.yml
app/src/: CMakeLists.txt  main.c
app/src/drivers/: CMakeLists.txt
app/src/drivers/display/: display_driver.h
app/src/tasks/: CMakeLists.txt  display_task.c  display_task.h  heartbeat_task.c  heartbeat_task.h  tasks.c
cmake/: TC-stm32f411re.cmake  TC-stm32f412zq.cmake
conan_profiles/: stm32f411re.txt
cubemx/: CMakeLists.txt  cubemx.ioc  startup_stm32f411xe.s  startup_stm32f412zx.s
cubemx/Core/: CMakeLists.txt
cubemx/Core/Inc/: CMakeLists.txt  main.h  stm32f4xx_hal_conf.h  tim.h
cubemx/Core/Src/: CMakeLists.txt  adc.c  can.c  gpio.c  main.c  quadspi.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
cubemx/Drivers/: CMakeLists.txt
cubemx/Drivers/CMSIS/Device/ST/: CMakeLists.txt
cubemx/Drivers/CMSIS/Device/ST/STM32F4xx/: CMakeLists.txt
cubemx/Drivers/CMSIS/Include/: CMakeLists.txt
cubemx/Drivers/STM32F4xx_HAL_Driver/Inc/: CMakeLists.txt
cubemx/Drivers/STM32F4xx_HAL_Driver/Src/: CMakeLists.txt
drivers/display/: display.c  display.h
scripts/: debug.sh
src/: CMakeLists.txt  main.c
